--- a/templates/index.html
+++ b/templates/index.html
@@ -37,30 +37,11 @@
             <div class="col-xs-12 feature text-center">
                 {% if breed is defined %}
                     <div class="d-flex justify-content-center m-3">
-                        <h1>It is a {{ breed }}!</h1>
+                        <h2>It is a {{ breed }}!</h2>
                     </div>
                     <div class="d-flex justify-content-center m-3">
                         <img style="max-height:500px;max-width:500px;height:auto;width:auto;"
                              src="/static/tmp/{{ path }}">
-                    </div>
-                {% endif %}
-                {% if name is defined %}
-                    <div class="d-flex justify-content-center m-3">
-                        <h1>Meet {{ name }}! {{ name }} is available for adoption near {{ zipcode }}.</h1>
-                    </div>
-                    <div class="d-flex justify-content-center m-3">
-                        <img style="max-height:500px;max-width:500px;height:auto;width:auto;" src="{{ dogpath }}">
-                    </div>
-                    <!-- Test new properties in Dog class -->
-                    {% for pic in testdog.photos %}
-                        <img src="{{ pic['small'] }}">
-                    {% endfor %}
-                    <!-- End of test new properties in Dog class -->
-                    <p>{{ testdog.environment }}</p>
-                    <p>{{ testdog.description | safe }}</p>
-                    <p>{{ testdog.address }}</p>
-                    <div class="d-flex justify-content-center m-3">
-                        <h1>For more info, call: {{ phone }}!</h1>
                     </div>
                 {% endif %}
                 <form method=post enctype=multipart/form-data>
@@ -76,6 +57,9 @@
                         </div>
                     </div>
                 </form>
+                {% if breed is defined %}
+                    <h2>Similar dogs near you:</h2>
+                {% endif %}
             </div>
         </div>
         <div class="row m-3">
