--- a/templates/dog.html
+++ b/templates/dog.html
@@ -49,7 +49,7 @@
                             {% if dog.spayed == True %}
                                 Spayed: Yes<br>
                             {% else %}
-                                No<br>
+                                Spayed: No<br>
                             {% endif %}
                             {% if dog.environment['children'] == True %}
                                 Children friendly: Yes<br>
