--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
                         <h2>It is a {{ breed }}!</h2>
                     </div>
                     <div class="d-flex justify-content-center m-3">
-                        <img style="max-height:500px;max-width:500px;height:auto;width:auto;"
+                        <img style="max-height:500px;max-width:400px;height:100%;width:100%;"
                              src="/static/tmp/{{ path }}">
                     </div>
                 {% endif %}
