--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -14,9 +14,9 @@
       {% else %}
       <a class="nav-item nav-link" href="{{url_for('signup')}}">Sign up</a>
       <a class="nav-item nav-link" href="{{url_for('login')}}">Log in</a>
-      <a class="nav-item nav-link" href="#">About</a>
+      <a class="nav-item nav-link" href="{{url_for('about')}}">About</a>
       {% endif %}
-      
+
     </div>
 
   </div>
