--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
                 <div class="col-sm-1"></div>
                 <div class="col-sm-6 m-3">
                     <h2>Identifying dog breeds is easy using IDog!</h2>
-                    <p>Upload or take a photo of a dog, and get a prediction of its breed
+                    <p>Upload or take a photo of a dog and get a prediction of its breed
                       as well as profiles of similar dogs available for adoption at a
                       shelter near you.
                     </p>
