--- a/templates/dog.html
+++ b/templates/dog.html
@@ -134,7 +134,7 @@
 
                 </div>
             </div>
-            <div class="col-sm-12 col-md-6 order-md-1 d-lg-none">
+            <div class="col-sm-12 col-md-6 order-first d-lg-none">
                 <div id="dog-carousel-small" class="carousel slide" data-ride="carousel">
                     <!-- Indicators -->
                     <ul class="carousel-indicators">
