--- a/templates/my_dogs.html
+++ b/templates/my_dogs.html
@@ -2,9 +2,10 @@
 {% block content %}
     {% include "navbar.html" %}
     <div class="container">
-        <div class="row mt-5">
+        <div class="row m-5">
             <div class="col-xs-12 feature text-center">
-                <h1>Welcome! {{ user.username }}</h1>
+                <h1>Welcome {{ user.username }}!</h1>
+                <h2>My Dogs</h2>
             </div>
         </div>
         <div class="row m-3">
