--- a/templates/about.html
+++ b/templates/about.html
@@ -2,10 +2,10 @@
 {% block content %}
     {% include "navbar.html" %}
     <div class="container">
-        <div class="row mt-5">
+        <div class="row m-5">
 
-          <div class="container mt-5">
-            <div class="row justify-content-center">
+          <div class="container">
+            <div class="row justify-content-center m-3">
               <h1>About</h1>
             </div>
             <div class="row justify-content-center">
