--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
     <div class="container-fluid">
         <div class="row hero d-lg-block">
             <div class="row vpad d-none d-md-block"></div>
-            <div class="row">
+            <div class="row m-auto">
                 <div class="col-sm-1"></div>
                 <div class="col-sm-6 m-3">
                     <h2>Identifying dog breeds is easy using IDog!</h2>
