--- a/templates/signup.html
+++ b/templates/signup.html
@@ -4,7 +4,7 @@
 {% from "_formhelpers.html" import render_field %}
 {% for message in get_flashed_messages()%}
 <div class="alert alert-warning alert-dismissible fade show" role="alert">
-    <strong>{{message}}</strong> 
+    <strong>{{message}}</strong>
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
     <span aria-hidden="true">&times;</span>
     </button>
@@ -13,9 +13,9 @@
 
 {% if current_user.is_authenticated %}
 
-<h1 class='text-center'> You already logged in</h1>
+<h1 class='text-center m-5'> You're already logged in</h1>
 {% else %}
-<h1 class='text-center'> Welcome to the sign up page!</h1>
+<h1 class='text-center m-5'> Sign Up</h1>
 <div>
 <div class='container'>
     <form method='POST' action='signup', style='width:200px; margin:auto'>
@@ -36,7 +36,7 @@
         <div class='form-group'>
             {{form.submit()}}
         </div>
-            
+
     </form>
 </div>
 </div>
