fixed location hash

--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
         </div>
 
     </div>
-    <div class="container">
+    <div class="container" id="prediction">
         <div class="row mt-5">
             <div class="col-xs-12 feature text-center">
                 {% if breed is defined %}
